Fixed boxes on bottom, now need to align the bio names under boxes

--- a/css/index.css
+++ b/css/index.css
@@ -107,6 +107,9 @@ body p {
   font-size: 15px;
   margin: 1rem;
 }
+body a {
+  text-align: center;
+}
 header {
   margin: 3rem;
   overflow: hidden;
@@ -128,6 +131,10 @@ header nav ul a {
 }
 header nav ul .noline {
   border: none;
+}
+header nav ul button {
+  color: black;
+  background-color: white;
 }
 @media (max-width: 500px) {
   header {
@@ -156,32 +163,11 @@ header nav ul .noline {
   top: 25%;
   color: white;
 }
-.hero-image {
-  background-image: url(/assets/home.png);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  position: relative;
-  height: 500px;
-  width: 60%;
-  display: flex;
-  justify-content: center;
-  align-content: center;
-  margin-left: 15rem;
-  margin-bottom: 4rem;
-  opacity: 75%;
-}
-.hero-text {
-  font-size: 4rem;
-  text-align: center;
-  position: absolute;
-  top: 25%;
-  color: white;
-}
 .artists-container {
   display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
+  justify-content: space-around;
+  align-content: center;
+  text-align: center;
   padding: 4rem;
   margin: 4rem;
   font-size: 1.5rem;
@@ -189,25 +175,35 @@ header nav ul .noline {
 }
 .artist {
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   text-align: center;
-  width: 95px;
+  align-content: center;
+  width: 350px;
 }
 .artist img.bioimg {
   display: flex;
-  justify-content: space-between;
-  width: 250px;
+  justify-content: space-around;
+  width: 350px;
   height: 250px;
+  border-radius: 2%;
 }
 .artist a {
   display: flex;
   color: black;
+  text-align: center;
+  align-content: center;
   text-decoration: none;
-  font-size: 15px;
+  font-size: 25px;
+}
+.artist .arttext {
+  display: flex;
+  justify-content: center;
+  align-content: center;
+  text-align: center;
 }
 .bio {
   display: flex;
   justify-content: center;
   align-content: center;
-  flex-direction: row;
+  text-align: center;
 }
