--- a/less/general.less
+++ b/less/general.less
@@ -19,5 +19,7 @@ body{
         margin: 1rem;
         
     }
-
+    a{
+        text-align: center;
+    }
 }
