--- a/less/mixins.less
+++ b/less/mixins.less
@@ -1,14 +1,16 @@
-.button () {
-    color: black;
-    background-color: white;
-}
+// .button () {
+//     color: black;
+//     background-color: white;
+//     width: 150px;
+//     height: 150px;
+// }
 
 .link () {
     color: black;
   }
 
   .bordered (){
-      border-bottom: solid 1px black;
+      border-top: solid 1px black;
       margin-bottom: 8rem;
     }
   
@@ -23,6 +25,8 @@
       text-align: center;
   }
 .buttons(@width, @height) {
+  color: black;
+  background-color: white;
   @width: 150px;
   @height:150px;
 }
