--- a/less/navigation.less
+++ b/less/navigation.less
@@ -24,26 +24,3 @@
         margin: 4rem;
         } // closes MQ
 } // closes header
-
-.hero-image{
-    background-image: url(/assets/home.png);
-     background-position: center;
-     background-repeat: no-repeat;
-     background-size: cover;
-     position: relative;
-     height: 500px;
-     width: 60%;
-     display: flex;
-     justify-content: center;
-     align-content: center;
-     margin-left: 15rem;
-     margin-bottom: 4rem;
-     opacity: 75%;
- } // closes hero img
- .hero-text {
-     font-size: 4rem;;
-     text-align: center;
-     position: absolute;
-     top: 25%;
-     color: white;
-   } // closes hero-text
